--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "webpack-library-starter",
-  "version": "1.0.2",
-  "description": "Produce universal library with webpack and es6",
+  "name": "shield-http",
+  "version": "0.0.5",
+  "description": "restful http base",
   "main": "lib/library.js",
   "scripts": {
-    "build": "webpack --env dev && webpack --env build && npm run test",
+    "build-test": "webpack --env dev && webpack --env build && npm run test",
+    "build": "webpack --env dev && webpack --env build ",
     "dev": "webpack --progress --colors --watch --env dev",
     "test": "mocha --require babel-register --colors ./test/*.spec.js",
     "test:watch": "mocha --require babel-register --colors -w ./test/*.spec.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/krasimir/webpack-library-starter.git"
+    "url": "https://github.com/pronebel/shield-http.git"
   },
   "keywords": [
-    "webpack",
-    "es6",
-    "starter",
+    "resful",
+    "http",
     "library",
     "universal",
     "umd",
     "commonjs"
   ],
-  "author": "Krasimir Tsonev",
+  "author": "nebel",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/krasimir/webpack-library-starter/issues"
+    "url": "https://github.com/pronebel/shield-http/issues"
   },
-  "homepage": "https://github.com/krasimir/webpack-library-starter",
+  "homepage": "https://github.com/pronebel/shield-http",
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
@@ -47,5 +47,9 @@
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "yargs": "^10.0.3"
+  },
+  "dependencies": {
+    "querystringify": "^2.0.0",
+    "url-join": "^4.0.0"
   }
 }
